--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "axios": "^1.6.0",
+    "dayjs": "1.11.13",
+    "jalaliday": "3.1.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-audio-recorder-player": "3.6.4",
+    "react-native-camera": "^4.2.1",
+    "react-native-fs": "2.20.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-modal-datetime-picker": "^16.0.0",
+    "react-native-picker-select": "^8.1.0",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^4.4.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
